--- a/styles.css
+++ b/styles.css
@@ -353,3 +353,24 @@ footer > div > div > p{
 .end > div > p{
   color: hsl(236, 13%, 42%);
 }
+
+@media screen and (max-width: 600px) {
+  .banner{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background: none;
+    font-size: xx-small;
+    padding-left: 1.5rem;
+  }
+  .banner-title{
+    color: whitesmoke;
+    margin-right: -15px;
+    margin-left: -65px;
+  }
+
+.banner-btn{
+  color: whitesmoke;
+}
+
+}
