added a buy now button

--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,9 @@ body {
   text-transform: capitalize;
   margin-bottom: 1rem;
 }
+.button-margin{
+  margin-top: 5px;
+}
 
 /* --------------- End of Cart ---------------- */
 
